# AIFA

./: .gitignore  Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  main.py  requirements.txt  utils.py
ai/: Dockerfile  LiteHRNet.py  dummy.py  input.py  models.py  requirements.txt  run.py  setup.cfg  setup.py
ai/aifa/base/: exercise.py  hpe.py  input.py  pose.py  vector.py
ai/aifa/exercises/: __init__.py  dead_lift.py  hammer_curl.py  shoulder_press.py  utils.py
ai/aifa/experimental/: api.py  exp_shoulder_press.py  r_sp.py
ai/aifa/inputs/: cv2httpstream.py  cv2vidstream.py  cv2webcam.py  httpstream.py
ai/aifa/models/: __init__.py  blazepose.py  dummy.py
ai/aifa/utils/: anno.py  general.py
ai/base/: __init__.py  exercise.py  hpe.py  input.py  keypoint.py  pose.py  utils.py  vector.py
ai/exercises/: __init__.py  dead_lift.py  hammer_curl.py  shoulder_press.py  utils.py
ai/experimental/: LiteHRNet.py  exp_shoulder_press.py  state.py
ai/inputs/: __init__.py  cv2httpstream.py  cv2vidstream.py  cv2webcam.py  httpstream.py
ai/models/: __init__.py  anno.py  blazepose.py  dummy.py
ai/scripts/: batch_split.py  capture_pose.py  eval.py  pose_filter.py  r_measure.py  speed.py  split.py  webcam.py
android/: .bazelrc  WORKSPACE  build.sh  install.sh
backend/: .env.example  .gitignore  Dockerfile  package.json
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
base/: hpe.py  input.py
data/: blazepose_kp.yaml  coco_kp.yaml
docs/: AI.md  Software.md
frontend/: .env.example  Dockerfile  package.json
scripts/: run.py
(+127 files in other folders)
