[metadata]
name = aifa
version = attr: aifa.__version__
author = Bao Ngo, Duc To, and Nhat Pham
author_email = 
url = https://aifa.one
description = AI fitness assistant
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = aifa
zip_safe = True
include_package_data = True
install_requires = numpy

[options.extras_require]
full =
    mediapipe>=0.8.11
    opencv_python>=4.6.0.66